--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,49 @@
     background-color: rgb(129, 129, 129) !important;
     color: azure !important;
 }
+
+
+.demo {
+    width: 200px;
+    margin: 0 auto;
+    position: relative;
+    text-align: justify;
+}
+.custom-loading-spinner {
+    cursor: progress;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.custom-loading-spinner::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    overflow: hidden;
+    background: #0b0b0b;
+    opacity: 0%;
+}
+.custom-loading-spinner::after {
+    box-sizing: border-box;
+    z-index: 0;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -25px 0 0 -25px;
+    border: 3px solid #f3f3f3;
+    border-top: 3px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: custom-loading 1s linear;
+    opacity: 0%;
+}
+@keyframes custom-loading {
+    0% { opacity: 100%;}
+    0% { transform: rotate(0deg); }
+    99% { transform: rotate(360deg); }
+    100% { opacity: 0%;}
+}
